2007-10-13  Stefan Siegl  <stesie@brokenpipe.de>

	* linux-src/net/ipv6/af_inet6.c (inet6_getname): Initialize
	sin6_scope_id.
	* linux-src/net/ipv6/datagram_ipv6.c (ipv6_recv_error): Likewise.
	* linux-src/net/ipv6/tcp_ipv6.c (v6_addr2sockaddr): Likewise.
	* linux-src/net/ipv6/udp_ipv6.c (udpv6_recvmsg): Likewise.
	* linux-src/net/ipv6/raw_ipv6.c (rawv6_recvmsg): Likewise.
	
	* linux-src/net/ipv6/af_inet6.c (inet6_bind): For link-local IPv6
	addresses copy sin6_scope_id to bound_dev_if and error out unless
	bound.
	* linux-src/net/ipv6/tcp_ipv6.c (tcp_v6_connect): Likewise.
	* linux-src/net/ipv6/udp_ipv6.c (udpv6_connect): Likewise.
	* linux-src/net/ipv6/raw_ipv6.c (rawv6_bind): Likewise.
	
	* linux-src/net/ipv6/raw_ipv6.c (rawv6_sendmsg): For link-local
	IPv6 addresses bind packet to interface specified by sin6_scope_id.
	* linux-src/net/ipv6/udp_ipv6.c (udpv6_sendmsg): Likewise.

2007-10-12  Thomas Schwinge  <tschwinge@gnu.org>

	* README: How to find information about IPv6 support.

2007-10-09  Stefan Siegl  <stesie@brokenpipe.de>

	* iioctl-ops.c: Include <net/sock.h>.
	(siocgifXaddr): Return EINVAL unless socket family is AF_INET.
	(siocsifXaddr): Likewise.

2007-10-08  Stefan Siegl  <stesie@brokenpipe.de>

	[task #5470: ``Implement pfinet6'']

	* config.h (CONFIG_IPV6, CONFIG_IPV6_EUI64): New defines, 
	set to 1.
	* Makefile (ipv6-srcs): New variable.
	(LINUXSRCS): Add ipv6-srcs.
	
	* ethernet.c (ethernet_demuxer): Call skb_put instead of changing
	skb->len directly, and thus now update skb->tail accordingly.
	* pfinet.h (PORTCLASS_INET, PORTCLASS_INET6): New enums.
	(trivfs_protid_portclasses, trivfs_protid_nportclasses)
	(trivfs_cntl_portclasses, trivfs_cntl_nportclasses): Declare
	these.
	(pfinet_bootstrap_portclass): New variable.
	(pfinet_bind): New function.
	* main.c: Define _HACK_ERRNO_H.  Include <errno.h>.  
	(trivfs_protid_portclasses, trivfs_cntl_portclasses): New slots
	for PORTCLASS_INET6.